backend/backend-error.txt

> backend@1.0.0 start
> node src/server.js

file:///C:/Users/bharg/OneDrive/Desktop/Coding/FarmToHome-main/FarmToHome-main/backend/src/routes/farmerRoutes.js:5
import { updateProfileSchema, addDeliveryZoneSchema } from '../validators/farmerValidators.js';
                              ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../validators/farmerValidators.js' does not provide an export named 'addDeliveryZoneSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0
